Fix Playlist overflow on Windows

--- a/src/ui/views/Playlist/Playlist.scss
+++ b/src/ui/views/Playlist/Playlist.scss
@@ -12,7 +12,7 @@
 	border-style: solid;
 	border-color: $border-color;
 	border-radius: 20px;
-	overflow-y: hidden;
+	overflow-x: hidden;
 }
 
 #playlist-container:hover {
